--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <ul>
         <li>
-          <a href="./assets/curriculo - MP.pdf" target="_blank">Ver meu curriculo</a>
+          <a href="./assets/Curriculo - MP.pdf" target="_blank">Ver meu curriculo</a>
         </li>
         <li>
           <a href="#" onclick="toggleSobre()">Sobre</a>
@@ -47,12 +47,12 @@
           Sou graduado em Análise e Desenvolvimento de Sistemas e estou em
           constante desenvolvimento profissional, com foco na área de
           programação e desenvolvimento de software. Atualmente estou estudando
-          e me aprofundando em Python também.
+          e me aprofundando em Python.
         </p>
 
         <p>
           Estou em processo de transição de carreira. Sempre trabalhei com
-          administração e RH e estou em busca de uma vaga na área de tecnologia.
+          administração e RH e estou em busca de uma vaga na área de desenvolvimento.
         </p>
 
         <p>
