--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <ul>
         <li>
-          <a href="./assets/Curriculo - MP.pdf" target="_blank">Ver meu curriculo</a>
+          <a href="./assets/cv.pdf" target="_blank">Ver meu curriculo</a>
         </li>
         <li>
           <a href="#" onclick="toggleSobre()">Sobre</a>
