--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/fotor-20250506151135.png" alt="" />
+        <img src="./assets/fotoMat.png" alt="" />
         <p>Matheus Pedrosa de Lima</p>
       </div>
 
